appId: ${APP_ID}
name: "H100 | Menu | TC007 - Guest Rx Orders"

onFlowStart:
  - runScript: ../../screens/SearchAndNav/searchNavObjects.js
---
# Flow: Menu navigation and verification for rx orders in guest flow
- runFlow: ../../subflows/Common/launchApp.yaml
- runFlow: ../../subflows/Account/onboarding/h100_continue_to_sign_options.yaml
- tapOn: ${output.account_health100_onboarding.continueAsAGuest}
- runFlow: ../../subflows/Home/homescreen_loaded_successful.yaml
- waitForAnimationToEnd
- runFlow: ../../subflows/Menu/navigateViaMenu.yaml
- waitForAnimationToEnd
- takeScreenshot: Menu_Pic
- assertVisible: ${output.explore_more_menu.rxOrdersBtn}
- tapOn: ${output.explore_more_menu.rxOrdersBtn}
- waitForAnimationToEnd
- assertVisible: ${output.account_health100_onboarding.continueWithMobileOrEmail}
- assertVisible: ${output.account_health100_onboarding.continueWithCvsHealth}
- assertVisible: ${output.account_health100_onboarding.continueAsAGuest}
- takeScreenshot: Test_complete